--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="resume">
       <div class="container">
         <div class="resume__block">
-          <h1 class="contact-info__header">John Doe</h1>
-          <h3 class="contact-info__sub-header">Full-Stack Developer</h3>
+          <h1 class="contact-info__header">Oleg Gudz</h1>
+          <h3 class="contact-info__sub-header">Full-Stack Developer!</h3>
 
           <div class="contact_info_container fh">
             <div class="contact-info__block">
@@ -27,7 +27,7 @@
                       80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"></path>
                   </svg>
                 </div>
-                <span>Lviv, Ukraine</span>
+                <span>Khmelnikskiy, Ukraine</span>
               </a>
 
             </div>
@@ -73,7 +73,7 @@
                   48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path>
               </svg>
             </div>
-            <p class="intro_text">I'm John, a software developer driven by innovation and
+            <p class="intro_text">Hello. I'm Oleg, a software developer driven by innovation and
               problem-solving. With a strong background in computer science,
               I'm dedicated to pushing boundaries and crafting elegant
               solutions through code.</p>
@@ -103,7 +103,7 @@
               <h3 class="experiences__header">Experience</h3>
               <div class="experiences__company">
                 <div class="experiences__company-header">
-                  <span class="experiences__company-header-durability">2005-Present</span>
+                  <span class="experiences__company-header-durability">2020-Present</span>
                   <h3 class="experiences__company-header-name">Binary Studio</h3>
                 </div>
 
