--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Résumé</title>
-  <link rel="stylesheet" href="styles.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
             </div>
 
             <div class="contact-info__block contact-info__block--center">
-              <img class="contact-info__avatar" src="assets/avatar.png" alt="Avatar" />
+              <img class="contact-info__avatar" src="assets/avatar.png" alt="Avatar">
             </div>
 
             <div class="contact-info__block">
